--- a/styles/main.css
+++ b/styles/main.css
@@ -21,6 +21,7 @@ h1, h2, h3, h4,p{
 }
 .fa-solid{
     font-size: 2.5rem;
+    color: var(--lightColor);
 }
 h1{
     font-size: 3rem;
@@ -36,13 +37,15 @@ p, li{
 }
 
 /*Nav*/
+body{
+    background-color: var(--green);
+}
 .navbar{
     height: 8rem;
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    background-color: red;
 }
 .navbar-content{
     display: none;
@@ -58,17 +61,19 @@ p, li{
     width: 60%;
     height: 2.5rem;
     font-size: 1.8rem;
+    border: none;
+    border-radius: 2rem;
+    text-align: center;
 }
-.fa-filter{
+.fa-filter, .search-container{
     display: none;
 }
-/*hero
+/* hero */
 .header{
     width: 100%;
-    height: 50vh;
-    background-color: lightpink;
-    /* background: radial-gradient(circle, rgba(255,255,255,0.2665441176470589) 0%, rgba(255,255,255,0.5970763305322129) 50%, rgba(255,255,255,1) 100%), url("../Design/img/banner.jpg") no-repeat center; */
-   /* background-size: cover; 
+    height: 45vh;
+    background: linear-gradient(0deg, rgba(178,202,169,1) 0%, rgba(178,202,169,0.773546918767507) 25%, rgba(178,202,169,0.48783263305322133) 50%, rgba(178,202,169,0.1825105042016807) 75%, rgba(178,202,169,0) 100%), url("../Design/img/banner.jpg") no-repeat center; 
+    background-size: cover; 
     position: relative;
 } 
 
@@ -81,66 +86,152 @@ p, li{
 
 /*Main*/
 .main{
+    padding: 2rem 0;
+}
+.movies-section{
     width: 100vw;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between; 
+    display: grid;
+    justify-items: center;
+    grid-template-columns: 1fr;
+    gap: 1rem;
     padding: 5rem 0;
 }
 .movie-container{
-    display: grid;
-    grid-template-columns: 1fr 2fr;
     width: 90%;
-    border: 1px solid blue;
     height: auto;
-    margin-bottom: 2rem;
-}
-.img-container{
-    width: 100%;
+    position: relative;
+    z-index: 0;
 }
 .info-container{
     width: 100%;
-    padding: 1rem;
+    height: 99%;
+    background-color: rgba(0,0,0,0.5);
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    color: var(--lightColor);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.info-container:hover{
+    background-color: rgba(0,0,0,0.3);
+}
+.data-movie_container{
+    display: flex;
+    width: 60%;
+}
+hr{
+    height: 1rem;
+    border: none;
+    border-left: 1px solid var(--lightColor);
+}
+.movie-link__info{
+    position: absolute;
+    height: 100%;
+    width: 100%;
 }
 .banner-img{
     width: 100%;
-    object-fit: contain;
+    height: 18rem;
+}
+.fa-circle-check{
+    font-size: 3rem;
+    position: absolute;
+    z-index: 10;
+    top: 0.5rem;
+    right: 0.5rem;
+    background-color: rgba(239, 239, 239, 0.3);
+    border-radius: 50%;
 }
 
+.movie-checkbox, .movie__watched{
+    display: none;
+}
+input[type=checkbox]:checked + label:before{
+    content: "\f058";
+    border-radius: 50%;
+    color: #5FEB01;
+    background-color: #E5FFD3;
+}
+.fa-circle-check:before {
+    content: "\f058";
+    color: var(--lightColor);
+}
 
 /*FOOTER*/
 .footer{
-    padding: 3rem 0 0;
+    padding: 1rem 0;
     text-align: center;
 }
 
-
-
-
 /*MOVIE DETAILS*/
-.video-movie{
+.navbar{
+    position: relative;
+    z-index: 10;
+}
+.hero-movie{
     background-color: lightblue;
     width: 100%;
     height: 40vh;
-    position: relative;
+}
+.video-movie{
+    width: 100%;
+    height: inherit;
 }
 .movie-cover{
     position: relative;
     width: 100%;
-    height: 13rem;
+    height: 19rem;
 }
 .movie-info{
+    display: flex;
+    flex-direction: column;
     text-align: center;
+    width: 90%;
+    margin: auto;
+    position: relative;
+}
+.movie-data-container{
+    display: flex;
+    width: 70%;
+    margin: 1rem auto;
+}
+.movie-data-container hr{
+    border-left: 1px solid var(--darkColor);
 }
 .movie-info__stars{
+    margin: 1rem 0;
     font-size: 2rem;
 }
+.movie-info__synopsis{
+    text-align: justify;
+    width: 90%;
+    margin: auto;
+}
+.movie-synopsis__title{
+    text-align: left;
+    width: 90%;
+    margin: auto;
+    margin-bottom: 1rem;
+}
+.movie-link{
+    font-size: 1.6rem;
+    color: var(--darkColor);
+    margin-top: 7rem;
+    text-align: right;
+}
+.movie-link:visited{
+    color: var(--darkColor);
+}
 .cover-img{
-    width: 30%;
+    width: 40%;
     position: absolute;
     top: -7rem;
     right: 0;
     left: 0;
     margin: auto;
+    border-radius: 1rem;
 }
+
