--- a/index.css
+++ b/index.css
@@ -43,11 +43,12 @@ a{
 
 /*header*/
 body{
-    background-color: var(--blue);
+    background: url(./assets/img/main-image.jpg) center no-repeat;
+    background-size: cover;
 }
 .logo-container{
     width: 85%;
-    height: 45vh;
+    height: 38vh;
     margin: auto;
 }
 .ghibli-logo{
@@ -71,7 +72,7 @@ body{
     align-items: center;
     margin: 2rem 0;
     width: 93%;
-    background-color: rgba(0, 0, 0, 0.4);
+    background-color: rgba(0, 0, 0, 0.7);
     border-radius: 2rem;
     padding: 1.5rem;
     text-align: center;
@@ -98,7 +99,7 @@ body{
     color: #ECCCFF;
 }
 hr{
-    width: 100%;
+    width: 90%;
     border: none;
     border-bottom: 1px solid var(--lightColor);
 }
@@ -109,7 +110,7 @@ hr{
     margin: 2rem 0;
     font-size: 1.6rem;
     font-family: 'Montserrat', sans-serif;
-    font-weight: 600;
+    font-weight: 700;
 }
 .btn-register{
     background-color: var(--green);
@@ -125,4 +126,21 @@ hr{
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+/*Tablet media queries*/
+@media screen and (min-width: 768px){
+    /*header*/
+    .logo-container{
+        height: 25vh;
+    }
+    /*card*/
+    .card{
+        width: 80%;
+        border-radius: 3rem;
+        padding: 2rem 3rem;
+    }
+    .info-container p{
+        text-align: center;
+    }
 }
