--- a/styles/details.css
+++ b/styles/details.css
@@ -20,6 +20,7 @@ html {
     padding: 0;
 }
 h1, h2, h3, p{
+    margin: 0;
     line-height: 1.2;
     font-family: 'Montserrat', sans-serif;
     color: #474D5D;
@@ -43,7 +44,7 @@ p{
 
 /*Nav*/
 body{
-    background-color: #F3F3F3;
+    background-color: #FFFEFB;
 }
 .navbar{
     height: 6rem;
@@ -52,13 +53,13 @@ body{
     align-items: center;
     justify-content: left;
     padding-left: 2rem;
-    background-color: var(--blue);
+    background-color: var(--green);
 }
+
 /*Hero*/
 .hero-movie{
     width: 100%;
-    height: 35vh;
-    position: relative;
+    height: 40vh;
 }
 .video-movie{
     width: 100%;
@@ -72,9 +73,10 @@ body{
 }
 .cover-img{
     width: 30%;
+    max-width: 13rem;
     position: absolute;
     right: 1.5rem;
-    top: -2rem;
+    top: -3rem;
     border-radius: 1rem;
 }
 .movie-titles{
@@ -89,14 +91,16 @@ body{
 }
 .movie-data-container{
     display: flex;
-    width: 90%;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-evenly;
+}
+.p-info{
+    font-weight: 500;
 }
 hr{
-    height: 1rem;
+    height: 2rem;
     border: none;
-    border-left: 1px solid var(--darkColor);
+    border-left: 2px solid var(--green);
 }
 
 /*Icons*/
@@ -106,7 +110,7 @@ hr{
     display: flex;
     justify-content: space-around;
     align-items: center;
-    background-color: rgba(51, 158, 184, 0.3);
+    background-color: rgba(178, 202, 169, 0.4);
     padding: 0.5rem 0;
 }
 /*check*/
@@ -179,61 +183,9 @@ input[type=checkbox]:checked + label:before{
 }
 /*footer*/
 .footer{
-    height: 3rem;
-    background-color: var(--blue);
-}
-/*PROFILE STYLES*/
-.main-profile{
-    padding: 3rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-.profile-img{
-    width: 25rem;
-    height: 25rem;
-    border-radius: 50%;
-}
-.profile-picture{
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
-}
-.profile-info{
-    margin-top: 2rem;
-    text-align: center;
-    height: 13rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-}
-.progress-user{
-    margin-top: 2.5rem;
-    display: flex   ;
-    flex-direction: column;
-    align-items: center;
-}
-.progress-container{
-    border: 1px solid var(--darkColor);
-    width: 100%;
-    height: 3.5rem;
-    border-radius: 3rem;
-    padding: 0.3rem;
-}
-.progress-bar{
-    width: 100%;
-    height: 2.7rem;
-    background-color: var(--green);
-    border-radius: 3rem;
-}
-.progress-number{
-    margin-top: 1rem;
-}
-/*footer*/
-.footer{
     padding: 1rem 0;
     text-align: center;
-    background-color: var(--blue);
+    background-color: var(--green);
     color: var(--lightColor);
 }
 .footer p{
@@ -241,4 +193,74 @@ input[type=checkbox]:checked + label:before{
 }
 .github-link{
     color: var(--lightColor);
+}
+
+/*MEDIA QUERIES*/
+@media screen and (min-width: 768px){
+    h1{
+        font-size: 3.5rem;
+    }
+    h2{
+        font-size: 2.8rem;
+    }
+    p{
+        font-size: 2.1;
+    }
+    /*Hero*/
+    .hero-movie{
+        height: 60vh;
+    }
+    /*Info Movie*/
+    .movie-container{
+        height: 18rem;
+        display: flex;
+        align-items: center;
+    }
+    .cover-img{
+        max-width: 18rem;
+        right: 7%;
+        top: -5rem;
+    }
+    .movie-titles{
+        width: 65%;
+        padding-left: 5rem;
+        padding-top: 1rem;
+    }
+    .movie-data-container{
+        width: 50%;
+        justify-content: space-between;
+    }
+    /*Icons*/
+    .movie-info-icons{
+        width: 80%;
+        margin: 0;
+    }
+    
+}
+@media screen and (min-width: 1024px){
+    /*Info Movie*/
+    .cover-img{
+        max-width: 23rem;
+        right: 7%;
+        top: -5rem;
+    }
+    .movie-titles{
+        margin-left: 10rem;
+    }
+    .movie-data-container{
+        width: 50%;
+        justify-content: space-between;
+    }
+    /*Icons*/
+    .movie-info-icons{
+        width: 45%;
+        margin: auto;
+        justify-content: space-around;
+    }
+    .movie-info{
+        width: 75%;
+        margin: auto;
+        margin-top: 4rem;
+        padding-bottom: 2rem;
+    }
 }
