--- a/styles/register.css
+++ b/styles/register.css
@@ -36,7 +36,7 @@ body{
 }
 .logo-container{
     width: 80%;
-    height: 30vh;
+    height: 26vh;
     margin: auto;
 }
 .ghibli-logo{
@@ -45,8 +45,15 @@ body{
     object-fit: contain;
 }
 /*main*/
-.register-container{
+.banner-container{
+    display: none;
+}
+.card-container{
     width: 85%;
+    margin: auto;
+}
+.register-container{
+    width: 90%;
     margin: 2rem auto;
     padding: 1rem;
     display: flex;
@@ -96,4 +103,52 @@ body{
 .login-paragraph a{
     color: var(--lightColor);
     font-weight: 500;
+}
+
+/*MEDIA QUERIES*/
+@media screen and (min-width: 768px){
+    /*header*/
+    .logo-container{
+        height: 20%;
+    }
+    /*main*/
+    .main{
+        display: grid;
+        grid-template-columns: 3fr 2fr;
+    }
+    .banner-container{
+        display: block;
+        height: 100vh;
+        width: 100%;
+    }
+    .side-banner{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+    .card-container{
+        grid-column: 1/2;
+        grid-row: 1/2;
+        width: 100%;
+        height: 100vh;
+        padding: 1rem;
+    }
+    /**/
+    .register-container{
+        margin: auto;
+        width: 75%;
+        padding: 1rem;
+    }
+    .register__input{
+        margin-top: 1.5rem;
+    }
+    .input-field{
+        margin: 0.5rem 0;
+    }
+    .btn-register{
+        margin-top: 1.5rem;
+    }
+    .login-paragraph{
+        margin: 1rem auto 0rem;
+    }
 }
