--- a/styles/home.css
+++ b/styles/home.css
@@ -48,7 +48,7 @@ a{
 
 /*Nav*/
 body{
-    background-color: #F3F3F3;
+    background-color: var(--lightColor);
 }
 .navbar{
     height: 7rem;
@@ -57,7 +57,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: var(--green);
+    background-color: rgba(178, 202, 169, 0.5);
 }
 .navbar-content{
     background-color: red;
@@ -74,6 +74,7 @@ body{
     opacity: 1;
     visibility: visible;
 }
+
 /*searchbar*/
 .input-box{
     display: flex;
@@ -88,7 +89,7 @@ body{
 }
 .search-bar{
     display: absolute;
-    color: var(--lightColor);
+    color: rgb(255, 255, 255);
     font-weight: 500;
     max-width: 2rem;
     height: 3rem;
@@ -134,10 +135,10 @@ body{
 }
 .search-results{
     z-index: 20;
-    background-color: var(--blue);
+    background-color: rgba(178, 202, 169, 0.5);
     width: 100%;
     max-height: 21rem;
-    top: 7rem;
+    top: 5rem;
     left: 0;
     position: absolute;
     overflow-y: auto;
@@ -169,7 +170,7 @@ body{
     position: absolute;
     left: 0;
     top: 7rem;
-    background-color: rgba(127, 206, 226, 0.9);
+    background-color: rgba(178, 202, 169, 0.5);
     width: 100%;
     height: 15rem;
     padding: 2rem;
@@ -204,10 +205,10 @@ select{
     justify-items: center;
     grid-template-columns: 1fr;
     gap: 1rem;
-    padding: 2rem 0;
+    padding: 3rem 0;
 }
 .movie-container{
-    width: 93%;
+    width: 90%;
     height: auto;
     position: relative;
     z-index: 0;
@@ -225,6 +226,7 @@ select{
     align-items: center;
     justify-content: center;
     text-align: center;
+    border-radius: 1rem;
 }
 .info-container:hover{
     background-color: rgba(0,0,0,0.3);
@@ -236,7 +238,7 @@ select{
     width: 60%;
 }
 hr{
-    height: 1rem;
+    height: 1.5rem;
     border: none;
     border-left: 1px solid var(--lightColor);
 }
@@ -248,13 +250,15 @@ hr{
 .banner-img{
     width: 100%;
     height: 18rem;
+    object-fit: cover;
+    border-radius: 1rem;
 }
 .fa-circle-check{
-    font-size: 3rem;
+    font-size: 4rem;
     position: absolute;
     z-index: 10;
-    top: 0.5rem;
-    right: 0.5rem;
+    top: 0.8rem;
+    right: 1rem;
     background-color: rgba(239, 239, 239, 0.3);
     border-radius: 50%;
 }
@@ -275,16 +279,49 @@ input[type=checkbox]:checked + label:before{
 
 /*FOOTER*/
 .footer{
-    padding: 1rem 0;
+    padding: 2rem 0;
     text-align: center;
     background-color: var(--green);
+}
+.footer p{
     color: var(--lightColor);
+    font-weight: 700;
 }
 .github-link{
     color: var(--lightColor);
+    text-decoration: underline;
 }
 
 
 /*MEDIA QUERIES*/
-@media screen and (min-width: 768px){}
-@media screen and (min-width: 1024px){}
+@media screen and (min-width: 768px){
+    /*Main*/
+    .movie-container{
+        width: 100%;
+    }
+    .movies-section{
+        width: 90%;
+        gap: 1.5rem;
+        grid-template-columns: 1fr 1fr;
+        margin: auto;
+    }
+    .movie-link__info{
+        position: absolute;
+        height: 100%;
+        width: 100%;
+    }
+    .banner-img{
+        height: 20rem;
+    }
+    .fa-circle-check{
+        font-size: 4rem;
+        top: 1rem;
+        right: 1rem;
+    }
+}
+@media screen and (min-width: 1024px){
+    /*Main*/
+    .movies-section{
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
